--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,12 @@ services:
   catalog.db:
     image: postgres
 
+  catalog.api:
+    image: ${DOCKER_REGISTRY-}catalogapi
+    build:
+      context: .
+      dockerfile: src/Services/Catalog/Catalog.API/Dockerfile
+
 volumes:
   postgres_catalog:
+
