--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,7 +11,19 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_catalog:/var/lib.postgresql/data/
+      - postgres_catalog:/var/lib/postgresql/data/
+
+  basket.db:
+    container_name: basket.db
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=BasketDb
+    restart: always
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_basket:/var/lib/postgresql/data/
 
   catalog.api:
     container_name: catalog.api
