--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
   catalog.db:
     image: postgres
 
+  basket.db:
+    image: postgres
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
@@ -12,4 +15,5 @@ services:
 
 volumes:
   postgres_catalog:
+  postgres_basket:
 
