Create discount db

--- a/src/Services/Discount/Discount.Grpc/appsettings.json
+++ b/src/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Data Source=DiscountDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
