--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost;Database=OrderDb;User Id=user;Password=password;Encrypt=False;TrustServerCertificate=True"
+    "Database": "Server=localhost;Database=OrderDb;User Id=sa;Password=Password123;Encrypt=False;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
