--- a/src/Services/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/src/Services/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -12,10 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Orders\Commands\" />
-    <Folder Include="Orders\EventHandlers\" />
-    <Folder Include="Orders\Queries\" />
+    <Folder Include="Features\EventHandlers\" />
+    <Folder Include="Features\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
   </ItemGroup>
 
 </Project>
