--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -7,6 +7,9 @@
     "Username": "guest",
     "Password": "guest"
   },
+  "FeatureManagement": {
+    "OrderFulfillment": false
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
