--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -14,6 +14,20 @@
           "Path": "/catalog-service/{**catch-all}"
         },
         "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      },
+      "basket-route": {
+        "ClusterId": "basket-cluster",
+        "Match": {
+          "Path": "/basket-service/{**catch-all}"
+        },
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      },
+      "ordering-route": {
+        "ClusterId": "ordering-cluster",
+        "Match": {
+          "Path": "/ordering-service/{**catch-all}"
+        },
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
       }
     },
     "Clusters": {
@@ -21,6 +35,20 @@
         "Destinations": {
           "destination1": {
             "Address": "http://localhost:6000/"
+          }
+        }
+      },
+      "basket-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://localhost:6001/"
+          }
+        }
+      },
+      "ordering-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://localhost:6003/"
           }
         }
       }
