--- a/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
+++ b/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>df5e3fa0-54dd-414e-898c-fce26f5aa330</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
